@@ -1,0 +1,64 @@
+use strict;
+use warnings FATAL => 'all';
+
+use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
+use Test::DZil;
+use Path::Tiny;
+
+BEGIN {
+    use Dist::Zilla::Plugin::NoTabsTests;
+    $Dist::Zilla::Plugin::NoTabsTests::VERSION = 9999
+        unless $Dist::Zilla::Plugin::NoTabsTests::VERSION;
+}
+
+
+my $tzil = Builder->from_config(
+    { dist_root => 't/does-not-exist' },
+    {
+        add_files => {
+            'source/dist.ini' => simple_ini(
+                [ GatherDir => ],
+                [ ExecDir => ],
+                [ NoTabsTests => ],
+            ),
+            path(qw(source lib Foo.pm)) => <<'MODULE',
+package Foo;
+use strict;
+use warnings;
+1;
+MODULE
+            path(qw(source lib Bar.pod)) => <<'POD',
+package Bar;
+=pod
+
+=cut
+POD
+            path(qw(source bin myscript)) => <<'SCRIPT',
+use strict;
+use warnings;
+print "hello there!\n";
+SCRIPT
+        },
+    },
+);
+
+$tzil->build;
+
+my $build_dir = $tzil->tempdir->subdir('build');
+my $file = path($build_dir, qw(xt release no-tabs.t));
+ok( -e $file, 'test created');
+
+my $content = $file->slurp;
+unlike($content, qr/[^\S\n]\n/m, 'no trailing whitespace in generated test');
+unlike($content, qr/\t/m, 'no tabs in generated test');
+
+my @files = (
+    path(qw(lib Foo.pm)),
+    path(qw(lib Bar.pod)),
+    path(qw(bin myscript)),
+);
+
+like($content, qr/'\Q$_\E'/m, "test checks $_") foreach @files;
+
+done_testing;
